--- a/style.css
+++ b/style.css
@@ -3,19 +3,20 @@
 * {
 	padding: 0px;
 	margin: 0px;
-	font-family: 'Muli', sans-serif;
+	font-family: "Muli", sans-serif;
 }
 
-input[type='button'] {
+input[type="button"] {
 	outline: none;
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 }
 
 body {
-	background-image: url("images/fire0.jpg");
+	background-image: url("images/fire.jpg");
 	/* Background image is centered vertically and horizontally at all times */
 	background-position: center center;
 	/* Background image doesn't tile */
@@ -56,35 +57,34 @@ a {
 	#newButton {
 		background-color: transparent;
 		border: #ffffff solid 1px;
-		font-size: .5rem;
+		font-size: 0.5rem;
 		border-radius: 5px;
-		padding: .5rem;
+		padding: 0.5rem;
 		color: #fff;
 		margin-top: 50px;
 	}
-	
+
 	#transparent-bg {
-	background-color: #7f7f7f;
-	background-color: rgba(0,0,0,0.7);
-	padding: 30px 0px;	
-	width: 100%;
+		background-color: #7f7f7f;
+		background-color: rgba(0, 0, 0, 0.7);
+		padding: 30px 0px;
+		width: 100%;
 	}
 }
 
 @media (min-width: 600px) {
-	
 	#quoteText {
 		font-size: 2.5rem;
 		padding: 0 60px 20px 60px;
 	}
-	
+
 	#sourceText {
 		font-size: 1.5rem;
 	}
 
 	#newButton {
-		font-size: .7rem;
-		padding: .7rem;
+		font-size: 0.7rem;
+		padding: 0.7rem;
 	}
 }
 
@@ -93,7 +93,7 @@ a {
 		font-size: 3rem;
 		padding: 0 90px 20px 90px;
 	}
-	
+
 	#sourceText {
 		font-size: 2rem;
 	}
@@ -109,7 +109,7 @@ a {
 		font-size: 3.5rem;
 		padding: 0 120px 20px 120px;
 	}
-	
+
 	#sourceText {
 		font-size: 2rem;
 	}
